Fix Navbar overlfowing on smaller screens

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,3 +1,9 @@
+@media (max-width: 450px) {
+	.navbarMenu {
+		flex-wrap: wrap;
+	}
+}
+
 nav {
 	padding: 8px;
 	display: flex;
